flickering fix

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@
 /* ----- GLOBAL -----*/
 html {
     overflow-x: hidden;
+    display: none;
 }
 
 div {
